src/objects/Agenda__c.object
<CustomObject>
    <fields>
        <fullName>Agenda_Description__c</fullName>
        <label>Agenda Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agenda_Type__c</fullName>
        <label>Agenda Type</label>
        <picklist>
            <picklistValues>
                <fullName>Event level Agenda</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Track level Agenda</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLN_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BLN_Track</label>
        <referenceTo>BLN_Track__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>BLN Agenda</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agenda Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Agendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>